kubernetes/apps/artemis-cluster/testing/plex/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`plex.dcunha.io`)
    kind: Rule
    services:
    - name: plex-tcp-svc
      port: 32400
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
